update to about me narrative

--- a/index.html
+++ b/index.html
@@ -18,18 +18,11 @@
     <main>
         <section>
             <h2>About Me</h2>
+            <p>Early in my working life I spent several years working on the production floor of a factory. One of the things that I learned there that is most applicable to my career in tech was a lot of practice with troubleshooting. Things would go wrong from time to time and often I would be the first person to try to figure out the what and why, and of course if I couldn't fix it then I would have to describe the issue to the maintanence person who would be next in line to diagnose the issue.</p>
             <p>I have several years of experience working in tech support, and have earned a certificate in web development.</p>
         </section>
         <section>
             <h2>Portfolio</h2>
-            <p>Under construction</p>
-        </section>
-        <section>
-            <h2>Skills/Tech Stack</h2>
-            <p>Under construction</p>
-        </section>
-        <section>
-            <h2>Resume/CV</h2>
             <p>Under construction</p>
         </section>
         <section>
