add to personal narrative

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                 troubleshooting. Things would go wrong from time to time and often I would be the first person to try to
                 figure out the what and why, and of course if I couldn't fix it then I would have to describe the issue
                 to the maintanence person who would be next in line to diagnose the issue.</p>
+            <p>My first tech related position was (among other things) doing application support in a call center. In
+                this role one of my duties was to identify bugs reported by users of the software that the company
+                wrote, reproduce them, and send them up to the developers. Once the developers had a solution I would
+                then work with the users to confirm that the issue was resolved.</p>
             <p>I have several years of experience working in tech support, and have earned a certificate in web
                 development.</p>
         </section>
