--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
                 this role one of my duties was to identify bugs reported by users of the software that the company
                 wrote, reproduce them, and send them up to the developers. Once the developers had a solution I would
                 then work with the users to confirm that the issue was resolved.</p>
-            <p>I have several years of experience working in tech support, and have earned a certificate in web
-                development.</p>
+            <p>My next tech related position was more what a person probably imagines when they think of a tech support
+                job. I worked for a government contractor on a remote help desk. I supported just about every device and
+                piece of software under the sun. Sometimes it seemed like if it used electricity and a government worker
+                used it, then they would call me for help with it. This job definitely expanded my ability to look up
+                most any issue to help the callers. I got a lot of experience with gathering the right information to
+                understand what the issue was and how to help them get past it.</p>
         </section>
         <section>
             <h2>Portfolio</h2>
