add nav section to page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,15 @@
         <h2>IT & Web Enthusiast</h2>
     </header>
     <main>
+        <nav>
+            <ul>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact-me">Contact Me</a></li>
+            </ul>
+        </nav>
         <section>
-            <h2>About Me</h2>
+            <h2 id="#about-me">About Me</h2>
             <p>Early in my working life I spent several years working on the production floor of a factory. One of the
                 things that I learned there that is most applicable to my career in tech was a lot of practice with
                 troubleshooting. Things would go wrong from time to time and often I would be the first person to try to
@@ -37,11 +44,11 @@
                 understand what the issue was and how to help them get past it.</p>
         </section>
         <section>
-            <h2>Portfolio</h2>
+            <h2 id="#portfolio">Portfolio</h2>
             <p>Under construction</p>
         </section>
         <section>
-            <h2>Contact Me</h2>
+            <h2 id="#contact-me">Contact Me</h2>
             <ul>
                 <li>You can email me at: <a href="mailto:douglasjbostock@gmail.com">douglasjbostock@gmail.com</a></li>
             </ul>
