--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>DJ Bostock</title>
 
     <link rel="stylesheet" href="css/style.css">
+
+    <script src="js/script.js" defer></script>
 </head>
 
 <body>
