add logo picture to header

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
 
 <body>
     <header>
-        <h1>DJ Bostock</h1>
-        <h2>IT & Web Enthusiast</h2>
+        <div>
+            <h1>DJ Bostock</h1>
+            <h2>IT & Web Enthusiast</h2>
+        </div>
+        <div>
+            <img src="images/happy-stick.jpg" alt="smiling stick figure">
+        </div>
+
     </header>
     <main>
         <nav>
